--- a/Editor PCBasket - Mou/MainWindow.xaml
+++ b/Editor PCBasket - Mou/MainWindow.xaml
@@ -1,17 +1,23 @@
 ﻿<mah:MetroWindow xmlns:mah="http://metro.mahapps.com/winfx/xaml/controls"
-                 x:Class="Editor_PCBasket___Mou.MainWindow"
-                 GlowBrush="{DynamicResource AccentColorBrush}"
                  xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
-                 BorderThickness="1"
                  xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                  xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                  xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
                  xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
                  xmlns:local="clr-namespace:Editor_PCBasket___Mou"
+                 xmlns:converters="clr-namespace:Editor_PCBasket___Mou.Converters"
+                 xmlns:EpcbModel="clr-namespace:EpcbModel;assembly=EpcbModel"
+                 x:Class="Editor_PCBasket___Mou.MainWindow"
+                 GlowBrush="{DynamicResource AccentColorBrush}"
+                 BorderThickness="1"
                  mc:Ignorable="d"
                  WindowState="Maximized"
                  WindowStartupLocation="CenterScreen"
-                 Title="Editor PCBasket - Mou" Height="1080" Width="1920">
+                 Title="Editor PCBasket - Mou" Height="1080" Width="1920" Loaded="MetroWindow_Loaded">
+    <mah:MetroWindow.Resources>
+        <CollectionViewSource x:Key="jugadorViewSource" d:DesignSource="{d:DesignInstance {x:Type EpcbModel:Jugador}, CreateList=True}"/>
+        <CollectionViewSource x:Key="equipoViewSource" d:DesignSource="{d:DesignInstance {x:Type EpcbModel:Equipo}, CreateList=True}"/>
+    </mah:MetroWindow.Resources>
     <Grid>
         <Grid>
             <Grid.ColumnDefinitions>
@@ -47,25 +53,97 @@
             </GroupBox>
 
             <Grid Grid.Row="1" Grid.ColumnSpan="2">
-                <ScrollViewer ScrollViewer.VerticalScrollBarVisibility="Visible">
-                    <DataGrid ItemsSource="{Binding EquiposList}" Name="EquiposDataGrid" 
-                              ScrollViewer.CanContentScroll="True" 
-                              ScrollViewer.VerticalScrollBarVisibility="Auto"
-                              ScrollViewer.HorizontalScrollBarVisibility="Auto"
-                              IsReadOnly="True">
-                        <DataGrid.Resources>
-                            <Style TargetType="DataGridRow">
-                                <EventSetter Event="MouseDoubleClick" Handler="DataGridRow_MouseDoubleClick"/>
-                            </Style>
-                        </DataGrid.Resources>
-                        <DataGrid.CellStyle>
-                            <Style TargetType="DataGridCell">
-                                <Setter Property="BorderThickness" Value="0"/>
-                                <Setter Property="FocusVisualStyle" Value="{x:Null}"/>
-                            </Style>
-                        </DataGrid.CellStyle>
-                    </DataGrid>
-                </ScrollViewer>
+                <StackPanel Orientation="Horizontal">
+                    <Expander Width="Auto"  Name="EquiposExpander" ExpandDirection="Right" IsExpanded="True" HorizontalAlignment="Stretch" HorizontalContentAlignment="Stretch" Expanded="EquiposExpander_Expanded">
+                        <Expander.Header>
+                            <TextBlock Text="Equipos" RenderTransformOrigin=".5,.5">
+                                <TextBlock.LayoutTransform>
+                                    <RotateTransform Angle="90" />
+                                </TextBlock.LayoutTransform>
+                            </TextBlock>
+                        </Expander.Header>
+                        <Grid DataContext="{StaticResource equipoViewSource}">
+                            <DataGrid x:Name="equipoDataGrid" AutoGenerateColumns="False" EnableRowVirtualization="True" 
+                                          ScrollViewer.CanContentScroll="True" 
+                                          ScrollViewer.VerticalScrollBarVisibility="Auto"
+                                          ScrollViewer.HorizontalScrollBarVisibility="Auto"
+                                          IsReadOnly="True" ItemsSource="{Binding}" RowDetailsVisibilityMode="VisibleWhenSelected">
+                                <DataGrid.Resources>
+                                    <Style TargetType="{x:Type DataGridRow}">
+                                        <EventSetter Event="Control.MouseDoubleClick" Handler="Equipos_MouseDoubleClick"/>
+                                    </Style>
+                                </DataGrid.Resources>
+                                <DataGrid.CellStyle>
+                                    <Style TargetType="{x:Type DataGridCell}">
+                                        <Setter Property="BorderThickness" Value="0"/>
+                                        <Setter Property="FocusVisualStyle" Value="{x:Null}"/>
+                                    </Style>
+                                </DataGrid.CellStyle>
+                                <DataGrid.Columns>
+                                    <DataGridTextColumn x:Name="punteroColumn1" Binding="{Binding Puntero}" Header="Puntero" Width="SizeToHeader"/>
+                                    <DataGridTextColumn x:Name="nombreCortoColumn1" Binding="{Binding NombreCorto}" Header="Nombre Corto" Width="SizeToHeader"/>
+                                    <DataGridTextColumn x:Name="nombreLargoColumn1" Binding="{Binding NombreLargo}" Header="Nombre Largo" Width="SizeToHeader"/>
+                                    <DataGridTextColumn x:Name="paisColumn" Binding="{Binding Pais}" Header="Pais" Width="SizeToHeader"/>
+                                    <DataGridTextColumn x:Name="mediaPlantillaColumn" Binding="{Binding MediaPlantilla}" Header="Media Plantilla" IsReadOnly="True" Width="SizeToHeader"/>
+                                    <DataGridTextColumn x:Name="mediaQuintetoColumn" Binding="{Binding MediaQuinteto}" Header="Media Quinteto" IsReadOnly="True" Width="SizeToHeader"/>
+                                    <DataGridTextColumn x:Name="pabellonColumn" Binding="{Binding Pabellon}" Header="Pabellon" Width="SizeToHeader"/>
+                                    <DataGridTextColumn x:Name="aforoColumn" Binding="{Binding Aforo}" Header="Aforo" Width="SizeToHeader"/>
+                                    <DataGridTextColumn x:Name="presupuestoColumn" Binding="{Binding Presupuesto}" Header="Presupuesto" Width="SizeToHeader"/>
+                                    <DataGridTextColumn x:Name="entrenadorColumn" Binding="{Binding Entrenador}" Header="Entrenador" Width="SizeToHeader"/>
+                                </DataGrid.Columns>
+                            </DataGrid>
+                        </Grid>
+                    </Expander>
+                    <Border Background="{DynamicResource MaterialDesignDivider}"
+                            Width="1"
+                            VerticalAlignment="Stretch"
+                            SnapsToDevicePixels="True" />
+                    <Expander Name="JugadoresExpander" ExpandDirection="Right" IsExpanded="False" Expanded="JugadoresExpander_Expanded">
+                        <Expander.Header>
+                            <TextBlock Text="Jugadores" RenderTransformOrigin=".5,.5">
+                                <TextBlock.LayoutTransform>
+                                    <RotateTransform Angle="90" />
+                                </TextBlock.LayoutTransform>
+                            </TextBlock>
+                        </Expander.Header>
+                        <ScrollViewer ScrollViewer.VerticalScrollBarVisibility="Visible">
+                            <Grid DataContext="{StaticResource jugadorViewSource}">
+                                <DataGrid x:Name="jugadorDataGrid" AutoGenerateColumns="False" EnableRowVirtualization="True" ItemsSource="{Binding}" RowDetailsVisibilityMode="Collapsed" 
+                                          
+                                          ScrollViewer.CanContentScroll="True" 
+                                          ScrollViewer.VerticalScrollBarVisibility="Auto"
+                                          ScrollViewer.HorizontalScrollBarVisibility="Auto"
+                                          IsReadOnly="True">
+                                    <DataGrid.Resources>
+                                        <Style TargetType="{x:Type DataGridRow}">
+                                            <EventSetter Event="Control.MouseDoubleClick" Handler="Jugadores_MouseDoubleClick"/>
+                                        </Style>
+                                        <converters:DemarcacionConverter x:Key="DemarcacionConverter" />
+                                    </DataGrid.Resources>
+                                    <DataGrid.CellStyle>
+                                        <Style TargetType="{x:Type DataGridCell}">
+                                            <Setter Property="BorderThickness" Value="0"/>
+                                            <Setter Property="FocusVisualStyle" Value="{x:Null}"/>
+                                        </Style>
+                                    </DataGrid.CellStyle>
+                                    <DataGrid.Columns>
+                                        <DataGridTextColumn x:Name="punteroColumn" Binding="{Binding Puntero}" Header="Puntero" Width="60"/>
+                                        <DataGridTextColumn x:Name="dorsalColumn" Binding="{Binding Dorsal}" Header="Dorsal" Width="60"/>
+                                        <DataGridTextColumn x:Name="nombreCortoColumn" Binding="{Binding NombreCorto}" Header="Nombre Corto" Width="150"/>
+                                        <DataGridTextColumn x:Name="nombreLargoColumn" Binding="{Binding NombreLargo}" Header="Nombre Largo" Width="300"/>
+                                        <DataGridTextColumn Header="Media (Q)" Binding="{Binding Medias.MediaQuinteto}"  Width="60"/>
+                                        <DataGridTextColumn Header="Media (P)" Binding="{Binding Medias.MediaPlantilla}" Width="60"/>
+                                        <DataGridTextColumn x:Name="demarcacionColumn" Binding="{Binding Demarcacion, Converter={StaticResource DemarcacionConverter}}" Header="Pos" Width="60"/>
+                                        <DataGridTextColumn x:Name="alturaColumn" Binding="{Binding Altura}" Header="Altura" Width="60"/>
+                                        <DataGridTextColumn x:Name="pesoColumn" Binding="{Binding Peso}" Header="Peso" Width="60"/>
+                                        <DataGridTextColumn x:Name="nacionalidadColumn" Binding="{Binding Nacionalidad}" Header="Nacionalidad" Width="120"/>
+                                        <DataGridTextColumn x:Name="anoNacimientoColumn" Binding="{Binding AnoNacimiento}" Header="Ano Nacimiento" Width="100"/>
+                                    </DataGrid.Columns>
+                                </DataGrid>
+                            </Grid>
+                        </ScrollViewer>
+                    </Expander>
+                </StackPanel>
             </Grid>
         </Grid>
     </Grid>
