--- a/Editor PCBasket - Mou/Views/EquipoWindow.xaml
+++ b/Editor PCBasket - Mou/Views/EquipoWindow.xaml
@@ -224,6 +224,7 @@
                     </DataGrid.Columns>
                 </DataGrid>
                 <StackPanel Orientation="Horizontal" Grid.ColumnSpan="2" Grid.Row="1" Height="50" HorizontalAlignment="Center">
+                    <Rectangle Width="2" Height="Auto" Fill="{DynamicResource AccentColorBrush4}" Margin="4,0"/>
                     <StackPanel Margin="10,0">
                         <Grid Width="150">
                             <Grid.ColumnDefinitions>
@@ -245,6 +246,24 @@
 
                     <Button Content="+" Margin="2" Command="{Binding SubirMediaCommand}"/>
                     <Button Content="-" Margin="2" Command="{Binding BajarMediaCommand}"/>
+                    <Rectangle Width="2" Height="Auto" Fill="{DynamicResource AccentColorBrush4}" Margin="4,0"/>
+
+                    <Button Click="DeleteJugadorClick" Margin="2,0" ToolTip="Quitar de plantilla">
+                        <Button.Content>
+                            <materialDesign:PackIcon Kind="AccountOff" Width="20" Height="20"/>
+                        </Button.Content>
+                    </Button>
+                    <Button Command="{Binding AddJugadorCommand}" Margin="2,0" ToolTip="Añadir jugador libre" IsEnabled="False">
+                        <Button.Content>
+                            <materialDesign:PackIcon Kind="AccountPlus" Width="20" Height="20"/>
+                        </Button.Content>
+                    </Button>
+                    <Button Command="{Binding TransferJugadorCommand}" Margin="2,0" ToolTip="Traspasar jugador" IsEnabled="False">
+                        <Button.Content>
+                            <materialDesign:PackIcon Kind="AccountSwitch" Width="20" Height="20"/>
+                        </Button.Content>
+                    </Button>
+                    <Rectangle Width="2" Height="Auto" Fill="{DynamicResource AccentColorBrush4}" Margin="4,0"/>
                 </StackPanel>
             </Grid>
         </GroupBox>
