[VENTANA EQUIPO] -Ahora se pueden eliminar jugadores de plantilla o añadir jugadores nuevos (creados desde 0).

--- a/Editor PCBasket - Mou/Views/EquipoWindow.xaml
+++ b/Editor PCBasket - Mou/Views/EquipoWindow.xaml
@@ -253,7 +253,7 @@
                             <materialDesign:PackIcon Kind="AccountOff" Width="20" Height="20"/>
                         </Button.Content>
                     </Button>
-                    <Button Command="{Binding AddJugadorCommand}" Margin="2,0" ToolTip="Añadir jugador libre" IsEnabled="False">
+                    <Button Click="AddJugadorClick"  Margin="2,0" ToolTip="Añadir jugador">
                         <Button.Content>
                             <materialDesign:PackIcon Kind="AccountPlus" Width="20" Height="20"/>
                         </Button.Content>
